--- a/app/src/main/res/layout/bottom_pop_block.xml
+++ b/app/src/main/res/layout/bottom_pop_block.xml
@@ -8,72 +8,81 @@
         android:id="@+id/bottom_constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="16dp"
         android:paddingTop="16dp"
         android:paddingEnd="16dp"
-        android:paddingStart="16dp"
         android:paddingBottom="150dp"
         app:layout_behavior="com.google..android.material.bottomsheet.BottomSheetBehavior">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_from_contacts"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Choose from contacts"
+            android:text="@string/choose_from_contacts_text"
             android:textAllCaps="false"
-            android:textColor="@color/teal_700"
+            android:textColor="@color/dark_sunburst"
             android:textSize="14sp"
             app:icon="@drawable/ic_contact"
             app:iconGravity="end"
-            app:iconTint="@color/teal_700"
+            app:iconTint="@color/dark_sunset"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/or_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/or_text"
+            android:textColor="@color/dark_sea"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/button_from_contacts"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_block"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:hint="Number to block"
-            app:errorEnabled="true"
+            android:layout_marginTop="14dp"
+            android:hint="@string/number_to_block_text"
             app:boxStrokeColor="@color/dark_sea"
+            app:errorEnabled="true"
             app:errorIconTint="@android:color/holo_red_light"
             app:errorTextColor="@android:color/holo_red_light"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_from_contacts">
+            app:layout_constraintTop_toBottomOf="@+id/or_textview">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_block_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="phone"/>
+                android:inputType="phone" />
 
         </com.google.android.material.textfield.TextInputLayout>
-        
+
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/fab_block_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Block"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="16dp"
             android:gravity="center"
+            android:text="@string/fab_extended_text"
             android:textAllCaps="false"
             android:textColor="@color/dark_sunset"
             app:backgroundTint="@color/lt_sunset"
             app:icon="@drawable/ic_block"
             app:iconTint="@color/dark_sunset"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_layout_block"
-            />
-        
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/input_layout_block" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
